--- a/package.json
+++ b/package.json
@@ -38,9 +38,9 @@
   },
   "dependencies": {
     "brfs": "^1.4.0",
-    "corslite": "0.0.7",
     "geojson-tidy": "^0.1.4",
     "hintify": "^0.1.0",
+    "xhr": "^2.0.2",
     "zuul": "^3.0.0"
   }
 }
