Implement async. W00t @batpad @aaronlidman

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "brfs": "^1.4.0",
     "geojson-tidy": "^0.1.4",
     "hintify": "^0.1.0",
+    "queue-async": "^1.0.7",
     "xhr": "^2.0.2",
     "zuul": "^3.0.0"
   }
