--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "leaflet-mapmatch",
-  "description": "A plugin to align geometries to streetmap data",
-  "main": "index.js",
-  "scripts": {
-    "test": "zuul --local -- test/test.js",
-    "build": "browserify -s mapmatch index.js > leaflet-mapmatch.js && uglifyjs leaflet-mapmatch.js -c -m > leaflet-mapmatch.min.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:mapbox/leaflet-mapmatch.git"
-  },
-  "browserify": {
-    "transform": [
+    "name": "leaflet-mapmatch",
+    "description": "A plugin to align geometries to streetmap data",
+    "main": "index.js",
+    "version": "0.0.0",
+    "scripts": {
+        "test": "zuul --local -- test/test.js",
+        "build": "browserify -s mapmatch index.js > leaflet-mapmatch.js && uglifyjs leaflet-mapmatch.js -c -m > leaflet-mapmatch.min.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git@github.com:mapbox/leaflet-mapmatch.git"
+    },
+    "browserify": {
+        "transform": [
       "brfs",
       "hintify"
     ]
-  },
-  "keywords": [
+    },
+    "keywords": [
     "leaflet",
     "mapmatch",
     "align",
@@ -24,24 +25,24 @@
     "osm",
     "resample"
   ],
-  "author": "Arun Ganesh",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/mapbox/leaflet-mapmatch/issues"
-  },
-  "homepage": "https://github.com/mapbox/leaflet-mapmatch",
-  "devDependencies": {
-    "browserify": "7.0.2",
-    "tape": "2.4.2",
-    "uglify-js": "2.4.16",
-    "mapbox.js": "1.6.4"
-  },
-  "dependencies": {
-    "brfs": "^1.4.0",
-    "geojson-tidy": "^0.1.4",
-    "hintify": "^0.1.0",
-    "queue-async": "^1.0.7",
-    "xhr": "^2.0.2",
-    "zuul": "^3.0.0"
-  }
+    "author": "Arun Ganesh",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/mapbox/leaflet-mapmatch/issues"
+    },
+    "homepage": "https://github.com/mapbox/leaflet-mapmatch",
+    "devDependencies": {
+        "browserify": "7.0.2",
+        "tape": "2.4.2",
+        "uglify-js": "2.4.16",
+        "mapbox.js": "1.6.4"
+    },
+    "dependencies": {
+        "brfs": "^1.4.0",
+        "geojson-tidy": "^0.1.4",
+        "hintify": "^0.1.0",
+        "queue-async": "^1.0.7",
+        "xhr": "^2.0.2",
+        "zuul": "^3.0.0"
+    }
 }
