--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-    "name": "mapbox-map-matching.js",
-    "description": "A plugin to align geometries to OpenStreetMap data via the Mapbox Map Matching API",
-    "main": "index.js",
-    "version": "0.1.0",
-    "scripts": {
-        "test": "zuul --local -- test/test.js",
-        "build": "mkdir -p dist && browserify -s mapmatching index.js > dist/mapbox.map-matching.js && uglifyjs dist/mapbox.map-matching.js -c -m > dist/mapbox.map-matching.min.js"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git@github.com:mapbox/mapbox-map-matching.js.git"
-    },
-    "browserify": {
-        "transform": [
+  "name": "mapbox-map-matching.js",
+  "description": "A plugin to align geometries to OpenStreetMap data via the Mapbox Map Matching API",
+  "main": "index.js",
+  "version": "0.1.0",
+  "scripts": {
+    "test": "zuul --local -- test/test.js",
+    "build": "mkdir -p dist && browserify -s mapmatching index.js > dist/mapbox.map-matching.js && uglifyjs dist/mapbox.map-matching.js -c -m > dist/mapbox.map-matching.min.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:mapbox/mapbox-map-matching.js.git"
+  },
+  "browserify": {
+    "transform": [
       "brfs",
       "hintify"
     ]
-    },
-    "keywords": [
+  },
+  "keywords": [
     "leaflet",
     "mapmatch",
     "align",
@@ -25,26 +25,24 @@
     "osm",
     "resample"
   ],
-    "author": "Arun Ganesh",
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/mapbox/mapbox-map-matching.js/issues"
-    },
-    "homepage": "https://github.com/mapbox/mapbox-map-matching.js",
-    "devDependencies": {
-        "browserify": "7.0.2",
-        "tape": "2.4.2",
-        "uglify-js": "2.4.16",
-        "mapbox.js": "1.6.4",
-        "zuul": "^3.0.0",
-        "st": ""
-    },
-    "dependencies": {
-        "brfs": "^1.4.0",
-        "geojson-tidy": "^0.1.4",
-        "hintify": "^0.1.0",
-        "polyline": "0.0.3",
-        "queue-async": "^1.0.7",
-        "xhr": "^2.0.2"
-    }
+  "author": "Arun Ganesh",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/mapbox/mapbox-map-matching.js/issues"
+  },
+  "homepage": "https://github.com/mapbox/mapbox-map-matching.js",
+  "devDependencies": {
+    "tape": "2.4.2",
+    "uglify-js": "2.4.16",
+    "zuul": "^3.0.0"
+  },
+  "dependencies": {
+    "brfs": "^1.4.0",
+    "browserify": "^7.0.2",
+    "geojson-tidy": "^1.0.0",
+    "hintify": "^0.1.0",
+    "polyline": "0.0.3",
+    "queue-async": "^1.0.7",
+    "xhr": "^2.0.2"
+  }
 }
